@@ -1,6 +1,6 @@
 plugins {
-    kotlin("jvm") version "1.9.20"
-    kotlin("plugin.serialization") version "1.9.20"
+    kotlin("jvm") version "2.0.20"
+    kotlin("plugin.serialization") version "2.0.20"
 }
 
 group = "org.matrix"
@@ -12,18 +12,19 @@ repositories {
 
 dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0")
+    implementation("net.java.dev.jna:jna:5.13.0")
     testImplementation("org.jetbrains.kotlin:kotlin-test")
     testImplementation("junit:junit:4.13.2")
-    
-    // Include the generated Kotlin bindings
-    implementation(files("../../kotlin/vodozemac.jar"))
 }
 
 tasks.test {
     useJUnit()
     
     // Add the native library path
-    systemProperty("java.library.path", "${projectDir}/../../kotlin/")
+    systemProperty("java.library.path", "${projectDir}/../../generated/kotlin/:${projectDir}/src/main/resources")
+    
+    // Add JVM arguments for native access
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
     
     // Copy test vectors
     dependsOn("copyTestVectors")
@@ -31,9 +32,17 @@ tasks.test {
 
 tasks.register<Copy>("copyTestVectors") {
     from("../test_vectors.json")
-    into("$buildDir/resources/test")
+    into("${layout.buildDirectory.get()}/resources/test")
 }
 
-kotlin {
-    jvmToolchain(11)
+// Set compatible JVM targets
+tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
+    kotlinOptions {
+        jvmTarget = "22"
+    }
+}
+
+tasks.withType<JavaCompile> {
+    targetCompatibility = "22"
+    sourceCompatibility = "22"
 }
